Added instructions to readme file to run program through .jar file